2.25.25a
  [Jörg Frings-Fürst]
  * changelog: Correct some typos.
  * bin/ADMIN_backup.pl: Add LOCALpath if requested.
  
2.25.25
  [Frank Gorgas-Waller]
  * Add Agent Prefix (2018-004):
    - extras/mysql_update/mysql-1531.sql,
      www/agc/vicidial.php,
      extras/upgrade_2.14.sql,
      www/vicidial/help.php,
      www/vicidial/admin.php: Add Agent Prefix for calls to Agents with 
        AgentNo != PhoneNo.

  [Jörg Frings-Fürst]
  * www/vicidial/admin.php: Switch from SVN-Version to Git-commit.
  * www/vicidial/AST_stat_callbacks.php: Add lists fields (2018-002).
  * Add add pickup_delay in ingroups (2018-003):
    - extras/MySQL_AST_CREATE_tables.sq,l
      extras/upgrade_2.14.sql,
      www/vicidial/admin.php,
      www/vicidial/help.php,
      readme.fp,
      extras/mysql_update/mysql-1531.sql.
  * Add upstream Rev. 2924-2925:
    - www/vicidial/admin_email_accounts.php,
    - www/vicidial/AST_source_vlc_status_report.php: Fixed translation
        issue #1069.
  * Add upstream Rev. 2926:
    - www/vicidial/admin.php: Fixed issue with CID Groups.
  * Add upstream Rev. 2927:
    - www/vicidial/admin.php: Added higher hopper level options.
  * Add upstream Rev. 2928:
    - www/agc/vicidial.php: Fix for rare webform VAR url issue.
  * Add upstream Rev. 2929:
  	- www/vicidial/AST_server_performance.php: Fixed blank default date/time
  	    ranges.
  * Add upstream Rev. 2930:
    - www/agc/options-example.php,
      www/agc/vdc_script_display.php,
      www/agc/vicidial.php: Added $INSERT_ variables: Added LOGINvar variables,
        and options.php $INSERT_ variables
  * Add upstream Rev. 2931:
    - www/agc/vdc_db_query.php: Fix for LogiNCamPaigns function, removed
        unnecesary onfocus trigger, issue #1074.
  * Add upstream Rev. 2932:
    - agi/agi-VDAD_ALL_inbound.agi,
      bin/ADMIN_keepalive_ALL.pl: Added more teodDB logging.
    - bin/AST_VDauto_dial.pl: Small changes for Inbound Queue No Dial.
  * Add upstream Rev. 2933: