@@ -1,5 +1,6 @@
 Patchlevel:
 
+2018-006 New Index UserTime on reccording_log and _achive.
 2018-005 New config file.
 2018-004 Add Agent Prefix for calls to Agents with AgentNo != PhoneNo.
 2018-003 Add pickup_delay into ingroups.
